js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-while-nested-imports.js
let
x
=
0
;
while
(
!
x
)
{
x
+
+
;
import
(
import
(
import
(
'
.
/
empty_FIXTURE
.
js
'
)
)
)
;
}
;
reportCompare
(
0
0
)
;
